--- a/src/main/webapp/app/entities/person/detail/person-detail.component.html
+++ b/src/main/webapp/app/entities/person/detail/person-detail.component.html
@@ -205,7 +205,7 @@
                         </td>
 
                         <td>
-                          <a target="_BLINK" class="btn btn-alt btn-warning btn-xs">
+                          <a (click)="generateBill(payment)" class="btn btn-alt btn-warning btn-xs">
                             <i class="fa fa-print"></i>
                             Print
                           </a>
