--- a/src/main/webapp/app/entities/purchase/detail/purchase-detail.component.html
+++ b/src/main/webapp/app/entities/purchase/detail/purchase-detail.component.html
@@ -332,7 +332,7 @@
       <i class="fa fa-backward"></i> Back
     </a>
 
-    <a class="btn btn-alt btn-warning btn-xs" target="_BLINK" href="http://localhost/intell/public/admin/purchase/11/invoice">
+    <a class="btn btn-alt btn-warning btn-xs" (click)="generateBill()">
       <i class="fa fa-print"></i>
       Print Bill
     </a>
