--- a/src/main/webapp/app/entities/purchase/list/purchase.component.html
+++ b/src/main/webapp/app/entities/purchase/list/purchase.component.html
@@ -107,7 +107,7 @@
                     </a>
                   </li>
                   <li>
-                    <a target="_BLINK">
+                    <a (click)="generateBill(transaction)">
                       <i class="fa fa-print" style="color: #edb426"></i>
                       Bill
                     </a>
