--- a/src/main/webapp/app/entities/sell/invoice/invoice.component.html
+++ b/src/main/webapp/app/entities/sell/invoice/invoice.component.html
@@ -11,7 +11,8 @@
           <p>
             Address: Ain haroune Fès
             <br />
-            Email:houssamberrezag@gmail.com
+            {{ 'Email' }}:
+            {{ 'houssamberrezag@gmail.com' }}
             <br />
             Phone: +212 6748483048
             <br /><br />
