--- a/src/main/webapp/app/entities/sell/list/sell.component.html
+++ b/src/main/webapp/app/entities/sell/list/sell.component.html
@@ -120,9 +120,9 @@
                     </a>
                   </li>
                   <li>
-                    <a target="_BLINK" href="http://localhost/intell/public/admin/sell/6/invoice">
+                    <a (click)="generateBill(transaction)">
                       <i class="fa fa-file" style="color: #edb426"></i>
-                      Invoice
+                      Facture
                     </a>
                   </li>
 
