--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -19,7 +19,7 @@
     </div>
   </div>
 </div>
-<jhi-footer></jhi-footer>
+<jhi-footer *ngIf="account !== null"></jhi-footer>
 <!-- <div class="" *ngIf="account !== null">
   <jhi-page-ribbon></jhi-page-ribbon>
   <div>
