--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -55,8 +55,8 @@
 </div>
  -->
 
-<img src="/content/assets/image-resources/blurred-bg/blurred-bg-10.jpg" class="login-img wow fadeIn" alt="" />
-<br />
+<!-- <img src="/content/assets/image-resources/blurred-bg/blurred-bg-10.jpg" class="login-img wow fadeIn" alt="" style="height: 100% !important;"/>
+  --><br />
 <br />
 <div class="center-vertical">
   <div class="center-content row">
