--- a/src/main/webapp/app/entities/categorie/list/categorie.component.html
+++ b/src/main/webapp/app/entities/categorie/list/categorie.component.html
@@ -5,7 +5,7 @@
   <div class="panel-heading">
     <a [routerLink]="['/categorie/new']" class="btn btn-success btn-alt btn-xs">
       <i class="fa fa-plus"></i>
-      {{ 'Create a new category' }}
+      {{ 'créer une nouvelle catégorie' }}
     </a>
   </div>
 
@@ -33,7 +33,7 @@
             <td class="text-center">
               <a [routerLink]="['/categorie', categorie.id, 'edit']" class="btn btn-info btn-alt btn-xs">
                 <i class="fa fa-edit"></i>
-                {{ 'edit' }}
+                {{ 'editer' }}
               </a>
               <!-- Delete modal trigger -->
               <a
@@ -44,7 +44,7 @@
                 data-target="#deleteModal"
               >
                 <i class="fa fa-trash"></i>
-                {{ 'delete' }}
+                {{ 'supprimer' }}
               </a>
             </td>
           </tr>
