--- a/src/main/webapp/app/entities/categorie/update/categorie-update.component.html
+++ b/src/main/webapp/app/entities/categorie/update/categorie-update.component.html
@@ -1,5 +1,6 @@
 <div id="page-title">
-  <h3>Create or update category</h3>
+  <h3 *ngIf="!this.editForm.get('id')!.value">Créer une catégorie</h3>
+  <h3 *ngIf="this.editForm.get('id')!.value">Mettre à jour une catégorie</h3>
 </div>
 
 <div class="panel">
@@ -39,7 +40,7 @@
           id="save-entity"
           data-cy="entityCreateSaveButton"
           [disabled]="editForm.invalid || isSaving"
-          value="Save"
+          value="enregistrer"
         />
       </div>
     </form>
