--- a/src/main/webapp/app/entities/transaction/list/transaction.component.html
+++ b/src/main/webapp/app/entities/transaction/list/transaction.component.html
@@ -2,8 +2,8 @@
   <h3>Transaction List</h3>
 </div>
 <div class="panel">
-  <div class="panel-heading">
-    <a target="_blank" href="http://localhost/intell/public/admin/transaction/all?print=true" class="btn btn-warning btn-alt btn-xs"
+  <!-- <div class="panel-heading">
+    <a class="btn btn-warning btn-alt btn-xs"
       ><i class="fa fa-print"></i> Print</a
     >
 
@@ -13,7 +13,7 @@
     </a>
 
     <input type="button" class="btn btn-alt bg-purple btn-xs" onclick="showSummary()" id="summaryBtn" value="Summary" />
-  </div>
+  </div> -->
 
   <div class="panel-body">
     <div id="summaryDiv" style="display: none">
@@ -111,7 +111,7 @@
   </div>
 
   <!-- Transaction search modal -->
-  <div class="modal fade" id="searchModal">
+  <!-- <div class="modal fade" id="searchModal">
     <div class="modal-dialog">
       <div class="modal-content">
         <form method="POST" action="http://localhost/intell/public/admin/transaction/all" accept-charset="UTF-8" class="form-horizontal">
@@ -308,7 +308,7 @@
         </form>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- search modal ends -->
 </div>
 
