--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -149,7 +149,7 @@
         <div class="dashboard-box dashboard-box-chart bg-white content-box">
           <div class="content-wrapper">
             <div class="header">Sell Vs Purchase</div>
-            <canvas id="sellsvspurchase"></canvas>
+            <jhi-sell-purchase-item></jhi-sell-purchase-item>
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
         <div class="dashboard-box dashboard-box-chart bg-white content-box">
           <div class="content-wrapper">
             <div class="header">Stock Value</div>
-            <canvas id="stockChart"></canvas>
+            <jhi-stock-item></jhi-stock-item>
           </div>
         </div>
       </div>
