--- a/src/main/webapp/app/home/home.component.scss
+++ b/src/main/webapp/app/home/home.component.scss
@@ -21,3 +21,8 @@ Main page styles
     background-size: contain;
   }
 }
+
+.content-wrapper {
+  height: 310px !important;
+  min-height: 310px !important;
+}
