--- a/src/main/webapp/app/entities/categorie/list/categorie.component.html
+++ b/src/main/webapp/app/entities/categorie/list/categorie.component.html
@@ -15,8 +15,8 @@
         <thead class="bg-gradient-9">
           <tr>
             <td class="text-center font-white">#</td>
-            <td class="text-center font-white">{{ 'Name' }}</td>
-            <td class="text-center font-white">{{ 'Subcategory' }}</td>
+            <td class="text-center font-white">{{ 'Nom' }}</td>
+            <td class="text-center font-white">{{ 'Sous-categorie' }}</td>
             <td class="text-center font-white">{{ 'Actions' }}</td>
           </tr>
         </thead>
