--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -3,9 +3,7 @@
   <!-- To the right -->
   <div class="pull-right hidden-xs">
     Powered By
-    <a href="http://www.houssam.com">
-      <b>Intelle Hub Inc</b> </a
-    >. &nbsp; | &nbsp; v2.0.0
+    <a href="http://www.houssam.com"> <b>HB Inc</b> </a>. &nbsp; | &nbsp; v1.0.0
   </div>
   <!-- Default to the left -->
   <strong
